# JumbuckNucleus

./: .gitmodules  Makefile  README.md
.github/workflows/: doc-and-test.yml
ch5虚拟内存+进程+/: search-index.js  source-files.js
ch5虚拟内存+进程+/jumbuck_nucleus/: all.html  fn.clear_bss.html  (+9 more)
ch5虚拟内存+进程+_稳定/: crates.js  search-index.js  settings.html  source-files.js
ch5虚拟内存+进程-4kiB原始版/: search-index.js
note/: Project Report.md
os/: Cargo.toml  Makefile
os/src/: config.rs  console.rs  entry.asm  lang_items.rs  linker-k210.ld  linker-qemu-is_16KiB.ld  linker-qemu-is_4KiB.ld  linker-qemu.ld  loader.rs  main.rs  panic.rs  sheep_logger.rs
os/src/boards/: k210.rs  qemu.rs
os/src/configs/: config_16KiB.rs  config_4KiB.rs
os/src/environment/: mod.rs
os/src/environment/boards/: k210.rs
os/src/environment/lang_items/: console.rs  mod.rs  panic.rs  sheep_logger.rs
os/src/environment/sbi/: mod.rs  timer.rs
os/src/memory/: address.rs  memory_set.rs  mod.rs  page_table.rs
os/src/memory/frame_allocator/: mod.rs
os/src/memory/frame_allocator/frame_allocator_algorithm/: best_fit_allocator.rs  buddy_system_allocator.rs  mod.rs  stack_allocator.rs  worse_fit_allocator.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/mm/frame_allocator/: mod.rs
os/src/mm/frame_allocator/frame_allocator_algorithm/: buddy_system_allocator.rs  first_fit_allocator.rs  mod.rs  stack_allocator.rs  worse_fit_allocator.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: pid.rs  task.rs
user/: Cargo.toml  Makefile
(+604 files in other folders)
