[package]
name = "jumbuck_nucleus"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>", "叶璨铭 <12011404@mail.sustech.edu.cn>", "邓值仁 <12012029@mail.sustech.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = {path= "../crates/buddy_system_allocator" }
bitflags = "1.2.1"
xmas-elf = "0.7.0"
log = "0.4.8"

[features]
board_qemu = []
board_k210 = []

# cargo 的构建模式分为 dev, release, test, bench
# cargo build, run, check rustc 自动使用dev
# cargo test 和 bench 使用 test 和 bench
# cargo install 使用 release
# 参考 https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 2

[profile.release]
debug = true

[profile.test] # inherits dev

[profile.bench] # inherits release
